syntax = "proto3";

package api;

option go_package="api";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "fleet/fleet.proto";
import "rideshare/rideshare.proto";
import "adservice/adservice.proto";
import "library/library.proto";
import "ptransit/ptransit.proto";
import "routing/routing.proto";
import "marketing/marketing.proto";
import "simulation/area/area.proto";
import "simulation/agent/agent.proto";
import "simulation/clock/clock.proto";
import "simulation/participant/participant.proto";

service Synerex {
    rpc RegisterDemand(Demand) returns (Response) {}

    rpc RegisterSupply(Supply) returns (Response) {}

    rpc ProposeDemand(Demand) returns (Response) {}

    rpc ProposeSupply(Supply) returns (Response) {}

    rpc ReserveSupply(Target) returns (ConfirmResponse) {}

    rpc ReserveDemand(Target) returns (ConfirmResponse) {}

    rpc SelectSupply(Target) returns (ConfirmResponse) {}

    rpc SelectDemand(Target) returns (ConfirmResponse) {}

    rpc Confirm(Target) returns (Response){}

    rpc SubscribeDemand(Channel) returns (stream Demand) {}

    rpc SubscribeSupply(Channel) returns (stream Supply) {}

    rpc SubscribeMbus(Mbus) returns (stream MbusMsg) {}

    rpc SendMsg(MbusMsg) returns (Response){}

    rpc CloseMbus(Mbus) returns (Response){}
}

message Response {
    bool ok = 1;
    string err = 2;
}

message ConfirmResponse{
    bool ok = 1;
    fixed64 mbus_id = 2;
    google.protobuf.Duration wait =3;
    string err = 4;
}

enum ChannelType {
    NONE = 0;
    RIDE_SHARE = 1;  // Rideshare Service Information
    AD_SERVICE = 2;  // Advertisement Service Information
    LIB_SERVICE = 3; // Public Library Service Information
    PT_SERVICE = 4;  // Public Transit Information
    ROUTING_SERVICE = 5; // Routing Service
    MARKETING_SERVICE = 6; // Marketing (Ad/Enquate)
    CLOCK_SERVICE = 7;  // Simulation Clock Service Information
    AREA_SERVICE = 8;  // Simulation Area Service Information
    AGENT_SERVICE = 9; // Simulation Agent Service Information
    PARTICIPANT_SERVICE = 10; // Simulation Agent Service Information
    ROUTE_SERVICE = 11; // Simulation Agent Service Information
    END = 12;
}

message Supply{
    fixed64 id = 1;
    fixed64 sender_id = 2;
    fixed64 target_id = 3;// for message id (not for sender_id)
    ChannelType type = 4;
    string supply_name = 5;
    google.protobuf.Timestamp ts = 6;
    //message content = 7; // json
    string arg_json = 7;
    fixed64 mbus_id = 8;   // new mbus id for select demand.
    oneof arg_oneof {
        fleet.Fleet arg_Fleet  = 10;   // message Fleet
        rideshare.RideShare arg_RideShare = 11;
        adservice.AdService arg_AdService = 12;
        library.LibService arg_LibService = 13;
        ptransit.PTService arg_PTService = 14;
        routing.RoutingService arg_RoutingService = 15;
        marketing.MarketingService arg_MarketingService = 16;
        ptransit.PTgtfs arg_PTgtfs = 17;
        clock.SetClockSupply arg_SetClockSupply = 18;
        clock.ForwardClockSupply arg_ForwardClockSupply = 19;
        clock.BackClockSupply arg_BackClockSupply = 20;
        area.GetAreaSupply arg_GetAreaSupply = 21;
        agent.GetAgentsSupply arg_GetAgentsSupply = 22;
        agent.SetAgentsSupply arg_SetAgentsSupply = 23;
        agent.ForwardAgentsSupply arg_ForwardAgentsSupply = 24;
        participant.GetParticipantSupply arg_GetParticipantSupply = 25;
        participant.SetParticipantSupply arg_SetParticipantSupply = 26;
        agent.GetAgentRouteSupply arg_GetAgentRouteSupply = 27;
        agent.GetAgentsRouteSupply arg_GetAgentsRouteSupply = 28;
    }
}

message Demand {
    fixed64 id = 1;
    fixed64 sender_id = 2;
    fixed64 target_id = 3; // if set with message id (not for sender_id) (select for supply)
    ChannelType type = 4;
    string demand_name = 5;
    google.protobuf.Timestamp ts = 6;
    //message content = 7; // json
    string arg_json = 7;
    fixed64 mbus_id = 8;   // new mbus id for select supply...
    oneof arg_oneof {
        fleet.Fleet arg_Fleet = 10;   // message Fleet
        rideshare.RideShare arg_RideShare = 11;
        adservice.AdService arg_AdService = 12;
        library.LibService arg_LibService = 13;
        ptransit.PTService arg_PTService = 14;
        routing.RoutingService arg_RoutingService = 15;
        marketing.MarketingService arg_MarketingService = 16;
        ptransit.PTgtfs arg_PTgtfs = 17;
        clock.SetClockDemand arg_SetClockDemand = 18;
        clock.ForwardClockDemand arg_ForwardClockDemand = 19;
        clock.BackClockDemand arg_BackClockDemand = 20;
        area.GetAreaDemand arg_GetAreaDemand = 21;
        agent.GetAgentsDemand arg_GetAgentsDemand = 22;
        agent.SetAgentsDemand arg_SetAgentsDemand = 23;
        participant.GetParticipantDemand arg_GetParticipantDemand = 25;
        participant.SetParticipantDemand arg_SetParticipantDemand = 26;
        agent.GetAgentRouteDemand arg_GetAgentRouteDemand = 27;
        agent.GetAgentsRouteDemand arg_GetAgentsRouteDemand = 28;
    }
}



message Target {
    fixed64 id = 1;
    fixed64 sender_id = 2;
    fixed64 target_id = 3; // for target
    ChannelType type = 4;
    google.protobuf.Duration wait = 5;
    fixed64 mbus_id = 6;    // if you need message bus, set Mbus with mbus_id = 1
}

message Channel {
    fixed64 client_id = 1;
    ChannelType type = 2;
    string arg_json = 3;  // for Channel Argument
}

message Mbus {
    fixed64 client_id = 1;
    fixed64 mbus_id = 2;
    string arg_json = 3; // for mbus description
}

message MbusMsg {
    fixed64 msg_id = 1;    // if 0 for close message
    fixed64 sender_id = 2;
    fixed64 target_id = 3; // for target // if 0 for broadcast in mbus
    fixed64 mbus_id = 4;
    uint32 msg_type = 5;  // for message type
    string msg_info = 6;   // for abstract information
    string arg_json = 7;
}
